# progenitor

./: Cargo.toml
example-build/: Cargo.toml
example-macro/: Cargo.toml
progenitor/: Cargo.toml
progenitor-client/: Cargo.toml
progenitor-client/src/: progenitor_client.rs
progenitor-impl/: Cargo.toml
progenitor-impl/src/: cli.rs  lib.rs  method.rs
progenitor-impl/tests/: test_output.rs  test_specific.rs
progenitor-impl/tests/output/: buildomat-builder-tagged.out  buildomat-builder.out  buildomat-cli.out  buildomat-positional.out  keeper-builder-tagged.out  keeper-builder.out  keeper-cli.out  keeper-positional.out  nexus-builder-tagged.out  nexus-builder.out  nexus-cli.out  nexus-positional.out  param-overrides-builder-tagged.out  param-overrides-builder.out  param-overrides-cli.out  param-overrides-positional.out  propolis-server-builder-tagged.out  propolis-server-builder.out  propolis-server-cli.out  propolis-server-positional.out  test_client_version_star.deps  test_default_params_builder.out  test_default_params_positional.out  test_freeform_response.out  test_renamed_parameters.out
progenitor-macro/: Cargo.toml
progenitor/src/: main.rs
