[package]
name = "example-macro"
version = "0.0.1"
authors = ["Adam H. Leventhal <ahl@oxidecomputer.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
progenitor = { path = "../progenitor" }
reqwest = { version = "0.11.13", features = ["json", "stream"] }
reqwest-middleware = "0.2.0"
schemars = { version = "0.8.11", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
utoipa = { version = "2.2", default-features=false, features = ["actix_extras"] }
fake = { version = "2.5", features = ["derive", "chrono", "uuid"] }
rand = "0.8"